updated ui to sorta match web. Spacing is not working correctly dunno

--- a/app/src/renderer/src/assets/main.css
+++ b/app/src/renderer/src/assets/main.css
@@ -1,6 +1,6 @@
 @import './base.css';
 @import 'tailwindcss';
-@import "tw-animate-css";
+@import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
 body {
@@ -11,6 +11,10 @@ body {
   background-image: url('./wavy-lines.svg');
   background-size: cover;
   user-select: none;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 code {
@@ -35,6 +39,10 @@ code {
   justify-content: center;
   flex-direction: column;
   margin-bottom: 80px;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .logo {
